#AM_CFLAGS = -Wno-enum-compare -std=gnu99 -Wall -Werror -g -O0 -DPTMD_VERSION=\"$PTMD_VERSION\"
noinst_LIBRARIES = libptmdep.a
libptmdep_a_SOURCES = csv.c  hash.c  hashtable.c  log.c  itimer.c
noinst_HEADERS = \
	cumulus.h csv.h hash.h hashtable.h log.h itimer.h kvec.h build_assert.h

EXTRA_DIST = License CCAN.License
