# Copyright 2016,2017 Cumulus Networks, Inc. All rights reserved.
#
# This file is licensed to You under the Eclipse Public License (EPL);
# You may not use this file except in compliance with the License. You
# may obtain a copy of the License at
# http://www.opensource.org/licenses/eclipse-1.0.php

AM_CPPFLAGS = -I../
noinst_LIBRARIES = libptmlogdep.a
libptmlogdep_a_SOURCES = log.c  itimer.c
noinst_HEADERS = \
	log.h itimer.h

EXTRA_DIST = License CCAN.License
